# compile_time_ls_colours

./: Cargo.toml  README.md  build.rs  colour_output.html  copypaste.md  ls_colours.rs
src/: lib.rs  test.rs
