[package]
name = "compile_time_ls_colours"
version = "0.5.0"
edition = "2024"
description = "A compile-time map of LS_COLORS-style extension-to-colour mappings"
license = "MIT"
keywords=["filesystem","colors","hashmap","colours"]
repository = "https://github.com/alexcu2718/compile_time_ls_colours"
[build-dependencies]
phf_codegen = "0.13.1"


[dependencies]
phf = { version = "0.13.1", features = ["macros", "phf_macros"] }

