[package]
name = "compile_time_ls_colours"
version = "0.5.1"
rust-version = "1.75.0"
edition="2021"
description = "A compile-time map of LS_COLORS-style extension-to-colour mappings"
license = "MIT"
keywords=["filesystem","colors","hashmap","colours"]
repository = "https://github.com/alexcu2718/compile_time_ls_colours"
[build-dependencies]
phf_codegen = {version="0.13.1",optional=true}


[dependencies]
phf = { version = "0.13.1", features = ["macros", "phf_macros"],optional=true }


[features]
default = []
phf = ["dep:phf", "dep:phf_codegen"]

